--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html>
   <head>
     <title>Friends of Lang-Carson Park</title>
+    <link rel="stylesheet" href="normalize.css">
+    <style>
+      section {
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello world, from Lang-Carson Park in beautiful Reynoldstown, Atlanta, Georgia!</h1>
+    <section>
+      <img src="logo.svg">
+    </section>
   </body>
 </html>
