--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <section>
-      <img src="logo.svg">
+      <a href="https://www.facebook.com/groups/friendoflangcarsonpark/"><img src="logo.svg"></a>
     </section>
   </body>
 </html>
