Add pictures from Cornhole tournament

--- a/index.html
+++ b/index.html
@@ -110,6 +110,26 @@
         display: inline-block;
         color: #339;
       }
+
+      .friends__pic {
+        display: block;
+        max-width: 90vw;
+        margin: 0.5em auto;
+        position: relative;
+      }
+      .friends__pic figcaption {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: rgba(255,255,255,0.4);
+        padding: 1em;
+        font-weight: bold;
+        display: none;
+      }
+      .friends__pic:hover figcaption {
+        display: block;
+      }
     </style>
   </head>
   <body>
@@ -152,7 +172,17 @@
       <p>Friends of Lang-Carson is a fiscal partner with Park Pride, an Atlanta non-profit promoting parks and greenspaces all of Atlanta since 1989.</p>
       <h2>Instagram (#langcarson)</h2>
       <!-- SnapWidget -->
-      <iframe src="http://snapwidget.com/in/?h=bGFuZ2NhcnNvbnxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=250115" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>
+      <iframe src="http://snapwidget.com/in/?h=bGFuZ2NhcnNvbnxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=250115" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:390px"></iframe>
+      <h2>Photos From Past Events</h2>
+      <h3>May 23rd, 2015&mdash;Reynoldstown Cornhole Tournament</h3>
+      <figure class="friends__pic">
+        <img src="https://lh6.googleusercontent.com/yJOqEhpw6F_0KZdjySG4kQfON1c1w94u5e69WHE1yQ=w1114-h558-no" class="friends__pic" alt="Picture of the participants of the 2015 Reynoldstown Cornhole Tournament">
+        <figcaption>We're ready!</figcaption>
+      </figure>
+      <figure class="friends__pic">
+        <img src="https://lh4.googleusercontent.com/-TBfalXu4taA/VWG_Wud9xTI/AAAAAAAAFTQ/yfzay0iQ5r4/w1114-h627-no/IMG_20150523_163248147.jpg" class="friends__pic" alt="Picture of the winners of the 2015 Reynoldstown Cornhole Tournament, Bennett Bryan and Brandon Moulard">
+        <figcaption>Your first Reynoldstown Champion Cornholers&mdash;Bennett Bryan and Brandon Moulard!</figcaption>
+      </figure>
     </section>
 
     <section id="what">
