The caption was making the figure too wide when viewed at fullscreen. Made img 100% wide to compensate.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
         margin: 0.5em auto;
         position: relative;
       }
+      .friends__pic img {
+        width: 100%;
+      }
       .friends__pic figcaption {
         position: absolute;
         bottom: 0;
