Fix Park Pride typo.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <li>Amy Price</li>
       </ul>
       <h2><a href="http://www.parkpride.org/">Park Pride</a></h2>
-      <p>Friends of Lang-Carson is a fiscal partner with Park Pride, an Atlanta non-profit promoting parks and greenspaces all of Atlanta since 1989.</p>
+      <p>Friends of Lang-Carson is a fiscal partner with Park Pride, an Atlanta non-profit promoting parks and greenspaces for all of Atlanta since 1989.</p>
       <h2>Instagram (#langcarson)</h2>
       <!-- SnapWidget -->
       <iframe src="http://snapwidget.com/in/?h=bGFuZ2NhcnNvbnxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=250115" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:390px"></iframe>
